--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
     <link rel="stylesheet" href="cssFiles/css/all.min.css">
     <link rel="stylesheet" href="cssFiles/css/bootstrap.min.css">
     <link rel="stylesheet" href="style.css">
-    <title>Document</title>
+    <link rel="shortcut icon" href="images/Maverick 1.png" type="image/x-icon">
+    <title>Maverick</title>
 </head>
 <body>
     
@@ -89,9 +90,6 @@
 
 <div class="row" style="background-color: #00308F; width: 100%; height: 200px; z-index: -1; margin: 0px; margin-top: -150px;">
 </div>
-
-
-
 
 
 
